--- a/src/assets/styles/component/_display.scss
+++ b/src/assets/styles/component/_display.scss
@@ -3,109 +3,109 @@
 //
 
 $displays: (
-  block: block,
-  inline: inline,
-  inline-block: inline-block,
-  none: none,
-  grid: grid,
-  flex: flex,
-  inline-flex: inline-flex,
-  table: table,
-  table-cell: table-cell
+	block: block,
+	inline: inline,
+	inline-block: inline-block,
+	none: none,
+	grid: grid,
+	flex: flex,
+	inline-flex: inline-flex,
+	table: table,
+	table-cell: table-cell,
 );
 
 $flex-layout: (
-  1: 1 1 0%,
-  auto: 1 1 auto,
-  initial: 0 1 auto,
+	1: 1 1 0%,
+	auto: 1 1 auto,
+	initial: 0 1 auto,
 );
 
 $flex-wrap: (
-  nowrap: nowrap,
-  wrap: nowrap,
-  wrap-reverse: wrap-reverse,
+	nowrap: nowrap,
+	wrap: nowrap,
+	wrap-reverse: wrap-reverse,
 );
 
 $flex-direction: (
-  row: row,
-  row-reverse: row-reverse,
-  col: column,
-  col-reverse: column-reverse,
+	row: row,
+	row-reverse: row-reverse,
+	col: column,
+	col-reverse: column-reverse,
 );
 
 $justify-content: (
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  around: space-around,
-  between: space-between,
-  evenly: space-evenly,
+	start: flex-start,
+	end: flex-end,
+	center: center,
+	around: space-around,
+	between: space-between,
+	evenly: space-evenly,
 );
 
 $align-items: (
-  start: flex-start,
-  end: flex-end,
-  center: center,
-  stretch: stretch,
-  baseline: baseline,
+	start: flex-start,
+	end: flex-end,
+	center: center,
+	stretch: stretch,
+	baseline: baseline,
 );
 
 $flex-grow: (
-  1: 1,
-  0: 0,
+	1: 1,
+	0: 0,
 );
 
 $flex-shrink: (
-  1: 1,
-  0: 0,
+	1: 1,
+	0: 0,
 );
 
 $flex-gap: (
-  col: column,
-  row: row,
+	col: column,
+	row: row,
 );
 
 @mixin display-properties($name, $prop, $arr) {
-  @each $mod, $dir in $arr {
-    .#{$mod} {
-      #{$prop}: #{$dir} !important;
-    }
-  }
+	@each $mod, $dir in $arr {
+		.#{$mod} {
+			#{$prop}: #{$dir} !important;
+		}
+	}
 }
 
 @mixin flex-properties($name, $prop, $arr) {
-  @each $mod, $dir in $arr {
-    .#{$name}-#{$mod} {
-      #{$prop}: #{$dir} !important;
-    }
-  }
+	@each $mod, $dir in $arr {
+		.#{$name}-#{$mod} {
+			#{$prop}: #{$dir} !important;
+		}
+	}
 }
 
 // flex properties + gap spacing
 @mixin flex-spacing($name, $prop, $arr) {
-  @each $mod, $dir in $arr {
-    @if $mod == 'col' or 'row' {
-      @for $i from 0 through $space-count {
-        .#{$name}-#{$mod}-#{$i} {
-          #{$dir}-#{$prop}: $spacing * $i !important;
-        }
-      }
-    } @else {
-      @for $i from 0 through $space-count {
-        .#{$name}-#{$i} {
-          #{$prop}: $spacing * $i + rem !important;
-        }
-      }
-    }
-  }
+	@each $mod, $dir in $arr {
+		@if $mod == "col" or "row" {
+			@for $i from 0 through $space-count {
+				.#{$name}-#{$mod}-#{$i} {
+					#{$dir}-#{$prop}: $spacing * $i !important;
+				}
+			}
+		} @else {
+			@for $i from 0 through $space-count {
+				.#{$name}-#{$i} {
+					#{$prop}: $spacing * $i + rem !important;
+				}
+			}
+		}
+	}
 }
 
-@include display-properties('', 'display', $displays);
-@include flex-properties('flex', 'flex', $flex-layout);
-@include flex-properties('flex', 'flex-wrap', $flex-wrap);
-@include flex-properties('flex', 'flex-direction', $flex-direction);
-@include flex-properties('grow', 'flex-grow', $flex-grow);
-@include flex-properties('shrink', 'flex-shrink', $flex-shrink);
-@include flex-properties('justify', 'justify-content', $justify-content);
-@include flex-properties('align', 'align-items', $align-items);
+@include display-properties("", "display", $displays);
+@include flex-properties("flex", "flex", $flex-layout);
+@include flex-properties("flex", "flex-wrap", $flex-wrap);
+@include flex-properties("flex", "flex-direction", $flex-direction);
+@include flex-properties("grow", "flex-grow", $flex-grow);
+@include flex-properties("shrink", "flex-shrink", $flex-shrink);
+@include flex-properties("justify", "justify-content", $justify-content);
+@include flex-properties("align", "align-items", $align-items);
 // @include flex-spacing('gap', 'gap', $flex-gap);
