--- a/src/assets/styles/component/_sizes.scss
+++ b/src/assets/styles/component/_sizes.scss
@@ -3,15 +3,14 @@ $size: 5;
 $count: 20;
 
 $sizes: (
-  w: 'width',
-  h: 'height',
+	w: "width",
+	h: "height",
 ) !default;
 
-
 @for $i from 1 through $count {
-  @each $name, $property in $sizes {
-    .#{$name}-#{$i * $size} {
-      #{$property}: $i * $size + 0% !important;
-    }
-  }
+	@each $name, $property in $sizes {
+		.#{$name}-#{$i * $size} {
+			#{$property}: $i * $size + 0% !important;
+		}
+	}
 }
