--- a/src/assets/styles/_components.scss
+++ b/src/assets/styles/_components.scss
@@ -1,13 +1,13 @@
 // Theme Mixins
 
-@import 'component/reset';
-@import 'component/colors';
-@import 'component/typography';
-@import 'component/display';
-@import 'component/container';
-@import 'component/grid';
-@import 'component/spacing';
-@import 'component/sizes';
-@import 'component/borders';
-@import 'component/buttons';
-@import 'component/forms';
+@import "component/reset";
+@import "component/colors";
+@import "component/typography";
+@import "component/display";
+@import "component/container";
+@import "component/grid";
+@import "component/spacing";
+@import "component/sizes";
+@import "component/borders";
+@import "component/buttons";
+@import "component/forms";
