--- a/src/assets/styles/component/_reset.scss
+++ b/src/assets/styles/component/_reset.scss
@@ -1,8 +1,8 @@
 *,
 *::before,
 *::after {
-  box-sizing: border-box;
-  font-family: inherit;
+	box-sizing: border-box;
+	font-family: inherit;
 }
 
 /* HTML5 display-role reset for older browsers */
@@ -17,9 +17,9 @@ hgroup,
 menu,
 nav,
 section {
-  display: block;
-  margin:0;
-  padding:0;
+	display: block;
+	margin: 0;
+	padding: 0;
 }
 
 ol,
@@ -27,32 +27,32 @@ ul,
 li,
 dt,
 dd {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+	padding: 0;
+	margin: 0;
+	list-style: none;
 }
 
 blockquote,
 q {
-  quotes: none;
+	quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: '';
-  content: none;
+	content: "";
+	content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 button {
-  appearance: none;
-  box-sizing: border-box;
-  box-shadow: none;
-  transition: all 0.2s ease;
-  background-color: transparent;
-  border-width: 0;
+	appearance: none;
+	box-sizing: border-box;
+	box-shadow: none;
+	transition: all 0.2s ease;
+	background-color: transparent;
+	border-width: 0;
 }
