--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,7 +1,5 @@
 // Base
-@import 'variables';
-@import 'mixins';
-@import 'components';
-@import 'global'
-
-
+@import "variables";
+@import "mixins";
+@import "components";
+@import "global";
