--- a/src/components/Appbar/Appbar.scss
+++ b/src/components/Appbar/Appbar.scss
@@ -1,128 +1,127 @@
 // App Header
 .app-bar {
-  z-index: 10;
-  position: sticky;
-  top: -100%;
-  background-color: var(--white);
+	z-index: 10;
+	position: sticky;
+	top: -100%;
+	background-color: var(--white);
 
-  &.active {
-    top: 0;
-    transition: all 0.2s ease-in-out;
-    // transform: translateY(-100%);
-  }
+	&.active {
+		top: 0;
+		transition: all 0.2s ease-in-out;
+		// transform: translateY(-100%);
+	}
 
-  >nav {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    height: 50px;
-  }
-  .title {
-    font-size: $text-xl;
-    font-weight: 600;
-    color: var(--black);
-    width: 100%;
-    text-align: center;
-  }
+	> nav {
+		display: flex;
+		justify-content: space-between;
+		align-items: center;
+		height: 50px;
+	}
+	.title {
+		font-size: $text-xl;
+		font-weight: 600;
+		color: var(--black);
+		width: 100%;
+		text-align: center;
+	}
 }
 
 // left
 .dropdown-logo {
-  position: relative;
-  display: flex;
-  align-items: center;
-  gap: 6px;
-  font-size: $text-lg;
-  font-weight: 600;
-  padding-left: 22px;
+	position: relative;
+	display: flex;
+	align-items: center;
+	gap: 6px;
+	font-size: $text-lg;
+	font-weight: 600;
+	padding-left: 22px;
 
-  &::after {
-    content: '';
-    background-image: url(@/assets/images/icon_16/arrow_open.png);
-    background-size: 16px 16px;
-    width: 16px;
-    height: 16px;
-  }
+	&::after {
+		content: "";
+		background-image: url(@/assets/images/icon_16/arrow_open.png);
+		background-size: 16px 16px;
+		width: 16px;
+		height: 16px;
+	}
 
-  .logo {
-    width: 32px;
-    height: 32px;
-    border-radius: 12px;
-    display: inline-block;
-    background-color: var(--black);
-    overflow: hidden;
+	.logo {
+		width: 32px;
+		height: 32px;
+		border-radius: 12px;
+		display: inline-block;
+		background-color: var(--black);
+		overflow: hidden;
 
-    svg,
-    img {
-      width: 100%;
-      height: auto;
-    }
-  }
+		svg,
+		img {
+			width: 100%;
+			height: auto;
+		}
+	}
 }
 
 .actions {
-  flex-shrink: 0;
-  display: flex;
-  height: 100%;
+	flex-shrink: 0;
+	display: flex;
+	height: 100%;
 
-  .btn {
-    display: flex;
-    align-items: center;
-    padding: 0 8px;
-  }
+	.btn {
+		display: flex;
+		align-items: center;
+		padding: 0 8px;
+	}
 
-  &.start {
-    .btn:first-child {
-      padding-left: 22px;
-    }
-  }
-  &.end {
-    .btn:last-child {
-      padding-right: 22px;
-    }
-  }
-
+	&.start {
+		.btn:first-child {
+			padding-left: 22px;
+		}
+	}
+	&.end {
+		.btn:last-child {
+			padding-right: 22px;
+		}
+	}
 }
 
 .noti {
-  position: relative;
+	position: relative;
 
-  // 새 알림
-  .new-flag {
-    width: 4px;
-    height: 4px;
-    border-radius: 2px;
-    background-color: var(--red);
-    position: absolute;
-    top: 10px;
-    right: 8px;
-  }
+	// 새 알림
+	.new-flag {
+		width: 4px;
+		height: 4px;
+		border-radius: 2px;
+		background-color: var(--red);
+		position: absolute;
+		top: 10px;
+		right: 8px;
+	}
 }
 
 .menu-toggler {
-  position: relative;
-  color: inherit;
+	position: relative;
+	color: inherit;
 }
 
 .menu {
-  z-index: 10;
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  width: 100%;
-  height: 100%;
-  background-color: var(--white);
-  color: var(--black);
+	z-index: 10;
+	position: fixed;
+	top: 0;
+	left: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background-color: var(--white);
+	color: var(--black);
 }
 
 .menu-enter-active,
 .menu-leave-active {
-  transition: transform 0.3s ease;
+	transition: transform 0.3s ease;
 }
 
 .menu-enter,
 .menu-leave-to {
-  // opacity: 0;
-  transform: translateX(100%);
+	// opacity: 0;
+	transform: translateX(100%);
 }
