--- a/src/assets/styles/component/_forms.scss
+++ b/src/assets/styles/component/_forms.scss
@@ -11,7 +11,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	font-size: $text-md;
 	padding: $padding;
 }
 
@@ -165,7 +164,7 @@
 	@include form-input($rounded, $form-padding);
 	@include form-elements;
 	@include form-pseudo($form-border-active-color);
-	font-size: $text-md;
+	
 
 	@mixin prefix($padding) {
 		flex-shrink: 0;
@@ -222,7 +221,6 @@
 // field container
 .fieldset {
 	width: 100%;
-
 	&:has(.invalid) {
 		color: var(--red);
 
@@ -230,6 +228,10 @@
 			background-image: url(data:image/svg+xml;base64,PHN2ZyB3aWR0aD0iMjQiIGhlaWdodD0iMjQiIHZpZXdCb3g9IjAgMCAyNCAyNCIgZmlsbD0ibm9uZSIgeG1sbnM9Imh0dHA6Ly93d3cudzMub3JnLzIwMDAvc3ZnIj4KPHBhdGggZD0iTTYgOUwxMiAxNUwxOCA5IiBzdHJva2U9IiNFNzFGMkEiIHN0cm9rZS13aWR0aD0iMS41IiBzdHJva2UtbGluZWNhcD0icm91bmQiIHN0cm9rZS1saW5lam9pbj0icm91bmQiLz4KPC9zdmc+Cg==) !important;
 		}
 	}
+	& + .fieldset {
+		margin-top: 30px;
+	}
+
 	.field-container {
 		position: relative;
 		height: 57px;
