--- a/src/assets/styles/_variables.scss
+++ b/src/assets/styles/_variables.scss
@@ -84,13 +84,13 @@ $text-align: (
 	"right": right,
 );
 
-$text-base: 1rem;
+$text-base: 1.4rem;
 
-$text-xs: 11px; // $text-size-base * 0.688;
-$text-sm: 12px; // $text-size-base * 0.75;
-$text-md: 14px; // $text-size-base * 0.875;
-$text-lg: 16px; // $text-size-base * 1;
-$text-xl: 18px; // $text-size-base * 1.125;
+$text-xs: 1.1rem;
+$text-sm: 1.2rem;
+$text-md: 1.4rem;
+$text-lg: 1.6rem;
+$text-xl: 1.8rem;
 
 $text-sizes: (
 	"xs": $text-xs,
@@ -101,12 +101,20 @@ $text-sizes: (
 ) !default;
 
 $headings: (
-	1: 40px,
-	2: 30px,
-	3: 28px,
-	4: 24px,
-	5: 20px,
-	6: 18px,
+	1: 3.0rem,
+	2: 2.4rem,
+	3: 2.0rem,
+	4: 1.8rem,
+	5: 1.6rem,
+	6: 1.4rem,
+) !default;
+
+$body-text: (
+	1: 1.5rem,
+	2: 1.4rem,
+	3: 1.3rem,
+	4: 1.2rem,
+	5: 1.1rem,
 ) !default;
 
 $font-weight: (
@@ -139,7 +147,7 @@ $container-max-widths: (
 ) !default;
 
 $grid-count: 12 !default;
-$grid-gutter: 44px !default;
+$grid-gutter: 4.4rem !default;
 
 $border-width: 1px;
 $border-width-lg: 2px;
@@ -163,40 +171,36 @@ $rounded-sizes: (
 /* ---------------------------------------------------------- 
 Spacing
 ---------------------------------------------------------- */
-$spacing: 0.5rem !default;
+$spacing: 0.4rem !default;
 $space-count: 20 !default;
 
 /* ---------------------------------------------------------- 
     Buttons
  ---------------------------------------------------------- */
-$btn-padding: 13px 14px;
-$btn-padding-xs: 6px 8px;
+$btn-padding: 10px 20px;
+$btn-padding-xs: 4px 8px;
 $btn-padding-sm: 6px 12px;
-$btn-padding-md: 9px 15px;
-$btn-padding-lg: 7px 32px;
-$btn-padding-xl: 17px 44px;
+$btn-padding-lg: 13px 20px;
+$btn-padding-xl: 18px 40px;
 
 $btn-padding-sizes: (
 	"": $btn-padding,
 	"-xs": $btn-padding-xs,
 	"-sm": $btn-padding-sm,
-	"-md": $btn-padding-md,
 	"-lg": $btn-padding-lg,
 	"-xl": $btn-padding-xl,
 ) !default;
 
-$btn-height: 46px;
-$btn-height-xs: 28px;
+$btn-height: 40px;
+$btn-height-xs: 23px;
 $btn-height-sm: 32px;
-$btn-height-md: 40px;
-$btn-height-lg: 56px;
-$btn-height-xl: 60px;
+$btn-height-lg: 46px;
+$btn-height-xl: 58px;
 
 $btn-height-sizes: (
 	"": $btn-height,
 	"-xs": $btn-height-xs,
 	"-sm": $btn-height-sm,
-	"-md": $btn-height-md,
 	"-lg": $btn-height-lg,
 	"-xl": $btn-height-xl,
 ) !default;
@@ -204,10 +208,9 @@ $btn-height-sizes: (
 $btn-font-sizes: (
 	"": $text-base,
 	"-xs": $text-xs,
-	"-sm": $text-sm,
-	"-md": $text-md,
-	"-lg": $text-lg,
-	"-xl": $text-xl,
+	"-sm": $text-base,
+	"-lg": $text-base,
+	"-xl": $text-lg,
 ) !default;
 
 // ----------------------------------------------------------
