--- a/src/assets/styles/component/_grid.scss
+++ b/src/assets/styles/component/_grid.scss
@@ -6,14 +6,14 @@
 	box-sizing: border-box;
 	flex: 0 1 auto;
 	margin-right: calc($grid-gutter / -2);
-	margin-left: calc($grid-gutter / -2);
+	margin-left:  calc($grid-gutter / -2);
 	> * {
 		flex-shrink: 0;
 		position: relative;
 		width: 100%;
 		max-width: 100%;
-		padding-right: calc($grid-gutter * 0.5);
-		padding-left: calc($grid-gutter * 0.5);
+		padding-right: calc($grid-gutter / 2);
+		padding-left:  calc($grid-gutter / 2);
 	}
 }
 
