--- a/src/assets/styles/global.scss
+++ b/src/assets/styles/global.scss
@@ -35,13 +35,17 @@
 		url("@/assets/fonts/woff/Pretendard-Medium.woff") format("woff");
 }
 
-html,
+html {
+	font-size: 10px;
+}
+
 body {
 	margin: 0;
 	padding: 0;
 	font-family: "Pretendard", -apple-system, BlinkMacSystemFont, system-ui,
 		Roboto, "Helvetica Neue", "Segoe UI";
-	font-size: 14px;
+	font-size: 1.4rem;
+	line-height: 1.4;
 	font-weight: 500;
 	line-height: normal;
 	-webkit-font-smoothing: antialiased;
